crates/xlate/tests/snapshots/golden_matrix__reason_on_nonreasoning_model__gpt-4o-mini__20260910__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "What is 2+2?"
    }
  ],
  "reasoning_effort": "medium",
  "max_completion_tokens": 64
}
--- headers ---
upstream_streams: false
--- degraded ---
