crates/xlate/tests/snapshots/golden_matrix__reason_on_nonreasoning_model__gpt-4o-mini__20260910__responses_to_chat__openai_compatible.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "llama-x",
  "messages": [
    {
      "role": "user",
      "content": "What is 2+2?"
    }
  ],
  "max_tokens": 64
}
--- headers ---
upstream_streams: false
--- degraded ---
reasoning=dropped
